# rust-datamodel

./: Cargo.toml  LICENSE  README.md
src/: main.rs  memory.rs  utils.rs
